--- a/themes/Learning/Learning_micro_child_Kullback_Leibler/task.ini
+++ b/themes/Learning/Learning_micro_child_Kullback_Leibler/task.ini
@@ -2,9 +2,9 @@
 ; nb_runs = 30
 arguments = 1000,1500,2000,2500,3000,3500,4000,4500,5000,7500,10000,20000,30000,40000,50000
 keyword = bif,Bayesian network, Learning structure, Learning parameters
-before_script = before_task
-before_function = createSamples
-before_task_arguments = {'sample_size' : [1000,1500,2000,2500,3000,3500,4000,4500,5000,7500,10000,20000,30000,40000,50000], 'bifFile' : 'micro_child.bif' }
+preparation_script = before_task
+preparation_function = createSamples
+preparation_task_arguments = 1000 1500 2000 2500 3000 3500 4000 4500 5000 7500 10000 20000 30000 40000 50000 micro_child.bif
 file_used = micro_child.bif
 evaluation_language = python
 evaluation_script = evaluation
