--- a/themes/Inference/Variable_Elimination/task.ini
+++ b/themes/Inference/Variable_Elimination/task.ini
@@ -16,4 +16,4 @@ task_ylabel = Time (s)
 task_title = Inference time by Variable Elimination
 task_display = groupedBar
 
-active = True
+active = False
