--- a/themes/Input_Output/BIF/task.ini
+++ b/themes/Input_Output/BIF/task.ini
@@ -34,4 +34,4 @@ task_ylabel = Time (s)
 task_title = Reading time of file in BIF format
 task_display = groupedBar
 
-active = True
+active = False
