--- a/themes/Input_Output/BIFXML/task.ini
+++ b/themes/Input_Output/BIFXML/task.ini
@@ -13,4 +13,4 @@ task_ylabel = Time (s)
 task_title = Reading time of file in BIFXML format
 task_display = groupedBar
 
-active = True
+active = False
